--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 /*
-Theme Name: wp-bootstrap
-Theme URI: http://320press.com/wpbs
-Description: A simple responsive theme based on the Bootstrap framework. Includes multiple page templates, two different sidebars and a theme options panel.
-Version: 3.3.1
-Author: Chris Barnes
-Author URI: http://cbarn.es
-Tags: black, white, one-column, two-columns, flexible-width, custom-background, custom-colors, custom-menu, full-width-template, theme-options
+Theme Name: Orangepress Starterkit Theme
+Theme URI: http://orangeweb.github.io/orangepress-starterkit-theme/
+Description: Orangepress StarterKit is a HTML5 Based Theme for Wordpress with Full Support of Twitter Bootstrap.
+Version: 1.0.0
+Author: Luiz Eduardo Oliveira Fonseca (Orangeweb), Chris Barnes (http://320press.com/wpbs)
+Author URI: http://orangeweb.com.br
+Tags: orangeweb, 320press, bootstrap
 License: GNU General Public License v2.0 & Apache License 2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html http://www.apache.org/licenses/LICENSE-2.0
 */
-
-/* HEADS UP: Everything that you will normally find here can be found in the library/less/wp.less */
